源代码/TeacherUsegeUSBSPI/sdk/api/vb.net/usb2spi.vb


    Declare Function SPI_Init Lib "USB2XXX.dll" (ByVal DevHandle As UInt32,ByVal SPIIndex As Int32, ByRef pConfig As SPI_CONFIG) As Int32
    Declare Function SPI_WriteBytes Lib "USB2XXX.dll" (ByVal DevHandle As UInt32,ByVal SPIIndex As Int32,<[In]()> ByVal pWriteData As Byte(),ByVal WriteLen As Int32) As Int32
    Declare Function SPI_WriteBytesAsync Lib "USB2XXX.dll" (ByVal DevHandle As UInt32,ByVal SPIIndex As Int32,<[In]()> ByVal pWriteData As Byte(),ByVal WriteLen As Int32) As Int32
    Declare Function SPI_ReadBytes Lib "USB2XXX.dll" (ByVal DevHandle As UInt32,ByVal SPIIndex As Int32,<[Out]()> ByVal pReadData As Byte(),ByVal ReadLen As Int32) As Int32
    Declare Function SPI_WriteReadBytes Lib "USB2XXX.dll" (ByVal DevHandle As UInt32,ByVal SPIIndex As Int32,<[In]()> ByVal pWriteData As Byte(),ByVal WriteLen As Int32,<[Out]()> ByVal pReadData As Byte(),ByVal ReadLen As Int32,ByVal IntervalTimeUs As Int32) As Int32
    Declare Function SPI_WriteBytesOfEvent Lib "USB2XXX.dll" (ByVal DevHandle As UInt32,ByVal SPIIndex As Int32,<[In]()> ByVal pWriteData As Byte(),ByVal WriteLen As Int32,ByVal EventPin As Int32,ByVal EventType As Byte,ByVal TimeOutOfMs As Int32) As Int32
    Declare Function SPI_ReadBytesOfEvent Lib "USB2XXX.dll" (ByVal DevHandle As UInt32,ByVal SPIIndex As Int32,<[Out]()> ByVal pReadData As Byte(),ByVal ReadLen As Int32,ByVal EventPin As Int32,ByVal EventType As Byte,ByVal TimeOutOfMs As Int32) As Int32
    Declare Function SPI_WriteReadBytesOfEvent Lib "USB2XXX.dll" (ByVal DevHandle As UInt32,ByVal SPIIndex As Int32,<[In]()> ByVal pWriteData As Byte(),ByVal WriteLen As Int32,<[Out]()> ByVal pReadData As Byte(),ByVal ReadLen As Int32,ByVal IntervalTimeUs As Int32,ByVal EventPin As Int32,ByVal EventType As Byte,ByVal TimeOutOfMs As Int32) As Int32
    Declare Function SPI_WriteBits Lib "USB2XXX.dll" (ByVal DevHandle As UInt32,ByVal SPIIndex As Int32,<[Out]()> ByVal pWriteBitStr As Byte()) As Int32
    Declare Function SPI_ReadBits Lib "USB2XXX.dll" (ByVal DevHandle As UInt32,ByVal SPIIndex As Int32,<[Out]()> ByVal pReadBitStr As Byte(),ByVal ReadBitsNum As Int32) As Int32
    Declare Function SPI_WriteReadBits Lib "USB2XXX.dll" (ByVal DevHandle As UInt32,ByVal SPIIndex As Int32,<[Out]()> ByVal pWriteBitStr As Byte(),<[Out]()> ByVal pReadBitStr As Byte(),ByVal ReadBitsNum As Int32) As Int32
    Declare Function SPI_SlaveWriteBytes Lib "USB2XXX.dll" (ByVal DevHandle As UInt32,ByVal SPIIndex As Int32,<[In]()> ByVal pWriteData As Byte(),ByVal WriteLen As Int32,ByVal TimeOutMs As Int32) As Int32
    Declare Function SPI_SlaveReadBytes Lib "USB2XXX.dll" (ByVal DevHandle As UInt32,ByVal SPIIndex As Int32,<[Out]()> ByVal pReadData As Byte(),ByVal ReadLen As Int32,ByVal TimeOutMs As Int32) As Int32
    Declare Function SPI_SlaveReadWriteBytes Lib "USB2XXX.dll" (ByVal DevHandle As UInt32,ByVal SPIIndex As Int32,<[Out]()> ByVal pReadData As Byte(),ByVal ReadDataLen As Int32,<[In]()> ByVal pWriteData As Byte(),ByVal WriteDataLen As Int32,ByVal TimeOutMs As Int32) As Int32
    Declare Function SPI_SlaveWriteReadBytes Lib "USB2XXX.dll" (ByVal DevHandle As UInt32,ByVal SPIIndex As Int32,<[In]()> ByVal pWriteData As Byte(),ByVal WriteDataLen As Int32,<[Out]()> ByVal pReadData As Byte(),ByVal ReadDataLen As Int32,ByVal TimeOutMs As Int32) As Int32
    Declare Function SPI_SlaveContinueRead Lib "USB2XXX.dll" (ByVal DevHandle As UInt32,ByVal SPIIndex As Int32, ByRef pSlaveReadDataHandle As SPI_GET_DATA_HANDLE) As Int32
    Declare Function SPI_SlaveGetBytes Lib "USB2XXX.dll" (ByVal DevHandle As UInt32,ByVal SPIIndex As Int32,<[Out]()> ByVal pReadData As Byte(),ByVal TimeOutOfMs As Int32) As Int32
    Declare Function SPI_SlaveContinueWriteReadStop Lib "USB2XXX.dll" (ByVal DevHandle As UInt32,ByVal SPIIndex As Int32) As Int32
    Declare Function SPI_SlaveContinueWrite Lib "USB2XXX.dll" (ByVal DevHandle As UInt32,ByVal SPIIndex As Int32,<[In]()> ByVal pWriteData As Byte(),ByVal WriteLen As Int32) As Int32
    Declare Function SPI_FlashInit Lib "USB2XXX.dll" (ByVal DevHandle As UInt32,ByVal SPIIndex As Int32,ByVal ClockSpeed As Int32,ByRef pConfig As SPI_FLASH_CONFIG) As Int32
    Declare Function SPI_FlashReadID Lib "USB2XXX.dll" (ByVal DevHandle As UInt32,ByVal SPIIndex As Int32,<[Out]()> ByVal pIDAs Byte()) As Int32
    Declare Function SPI_FlashEraseSector Lib "USB2XXX.dll" (ByVal DevHandle As UInt32,ByVal SPIIndex As Int32,ByVal StartSector As Int32,ByVal NumSector As Int32,ByVal TimeOutMs As Int32) As Int32
    Declare Function SPI_FlashEraseChip Lib "USB2XXX.dll" (ByVal DevHandle As UInt32,ByVal SPIIndex As Int32,ByVal TimeOutMs As Int32) As Int32
    Declare Function SPI_FlashErase Lib "USB2XXX.dll" (ByVal DevHandle As UInt32,ByVal SPIIndex As Int32,ByVal StartAddr As Int32,ByVal AddrBytes As Byte,ByVal EraseCmd As Byte,ByVal TimeOutMs As Int32) As Int32
    Declare Function SPI_FlashWrite Lib "USB2XXX.dll" (ByVal DevHandle As UInt32,ByVal SPIIndex As Int32,ByVal StartAddr As Int32,<[In]()> ByVal pWriteData As Byte(),ByVal WriteLen As Int32) As Int32
    Declare Function SPI_FlashRead Lib "USB2XXX.dll" (ByVal DevHandle As UInt32,ByVal SPIIndex As Int32,ByVal StartAddr As Int32,<[Out]()> ByVal pReadData As Byte(),ByVal ReadLen As Int32) As Int32
    Declare Function SPI_FlashReadFast Lib "USB2XXX.dll" (ByVal DevHandle As UInt32,ByVal SPIIndex As Int32,ByVal StartAddr As Int32,<[Out]()> ByVal pReadData As Byte(),ByVal ReadLen As Int32) As Int32
    Declare Function SPI_BlockWriteBytes Lib "USB2XXX.dll" (ByVal DevHandle As UInt32,ByVal SPIIndex As Int32,<[In]()> ByVal pWriteData As Byte(),ByVal BlockSize As Int32,ByVal BlockNum As Int32,ByVal IntervalTimeUs As Int32) As Int32
    Declare Function SPI_BlockReadBytes Lib "USB2XXX.dll" (ByVal DevHandle As UInt32,ByVal SPIIndex As Int32,<[Out]()> ByVal pReadData As Byte(),ByVal BlockSize As Int32,ByVal BlockNum As Int32,ByVal IntervalTimeUs As Int32) As Int32
    Declare Function SPI_BlockWriteReadBytes Lib "USB2XXX.dll" (ByVal DevHandle As UInt32,ByVal SPIIndex As Int32,<[In]()> ByVal pWriteData As Byte(),ByVal WriteBlockSize As Int32,<[Out]()> ByVal pReadData As Byte(),ByVal ReadBlockSize As Int32,ByVal BlockNum As Int32,ByVal IntervalTimeUs As Int32) As Int32
    Declare Function SPI_BlockWriteBytesOfEvent Lib "USB2XXX.dll" (ByVal DevHandle As UInt32,ByVal SPIIndex As Int32,<[In]()> ByVal pWriteData As Byte(),ByVal BlockSize As Int32,ByVal BlockNum As Int32,ByVal EventPin As Int32,ByVal EventType As Byte,ByVal TimeOutOfMs As Int32) As Int32
    Declare Function SPI_BlockReadBytesOfEvent Lib "USB2XXX.dll" (ByVal DevHandle As UInt32,ByVal SPIIndex As Int32,<[Out]()> ByVal pReadData As Byte(),ByVal BlockSize As Int32,ByVal BlockNum As Int32,ByVal EventPin As Int32,ByVal EventType As Byte,ByVal TimeOutOfMs As Int32) As Int32
    Declare Function SPI_BlockWriteReadBytesOfEvent Lib "USB2XXX.dll" (ByVal DevHandle As UInt32,ByVal SPIIndex As Int32,<[In]()> ByVal pWriteData As Byte(),ByVal WriteBlockSize As Int32,<[Out]()> ByVal pReadData As Byte(),ByVal ReadBlockSize As Int32,ByVal BlockNum As Int32,ByVal EventPin As Int32,ByVal EventType As Byte,ByVal TimeOutOfMs As Int32) As Int32


End Module
